<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_eae8e6"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/bg_status_bar_category"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <TextView
            android:id="@+id/detailsLast"
            style="@style/MeItemTextView1"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/status_left_arrow"
            android:text="@string/string_return" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/string_details"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/detailsShare"
            style="@style/MeItemTextView1"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:drawableRight="@drawable/icon_share"
            android:text="@string/string_share" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <com.handmark.pulltorefresh.library.PullToRefreshListView
                android:id="@+id/detailsList"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:scrollbars="none" />
            
            <RadioGroup
                android:id="@+id/detailsRG"
                android:layout_width="fill_parent"
                android:layout_height="54dp"
                android:orientation="horizontal"
                android:background="@color/dark_red"
                android:layout_alignParentBottom="true">
                <RadioButton 
                    android:id="@+id/detailsComment"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="fill_parent"
                    android:text="@string/string_comment"
                    style="@style/BottomIndicatorItem.RadioButton"
                    android:drawableTop="@drawable/icon_bottom_indicator_msg"/>
                <RadioButton 
                    android:id="@+id/detailsLove"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="fill_parent"
                    style="@style/BottomIndicatorItem.RadioButton"
                    android:text="@string/string_love"
                    android:drawableTop="@drawable/icon_bottom_indicator_attention"/>
                <RadioButton 
                    android:id="@+id/detailsShoping"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="fill_parent"
                    android:text="@string/string_shoping"
                    style="@style/BottomIndicatorItem.RadioButton"
                    android:drawableTop="@drawable/icon_bottom_indicator_me"/>
            </RadioGroup>
        </RelativeLayout>
    </FrameLayout>

</LinearLayout>